# scaling-waddle

./: CMakeLists.txt  README.md  concept.txt  main.cpp
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt
cpp/src/board/: board.txt
cpp/src/logger/: CMakeLists.txt  logger.hpp
python/: controller.py  main.py  model.py  observer.py  terminal.py  view.py
src/: CMakeLists.txt
src/board/: board.cpp  board.hpp  board.txt  space.cpp  space.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/model/: CMakeLists.txt  board.cpp  board.hpp  board.txt  color.hpp  model.hpp  piece.cpp  piece.hpp  simple_types.hpp  space.cpp  space.hpp
src/model/board/: board.cpp  board.hpp  space.cpp
src/observer/: CMakeLists.txt  observable.cpp  observable.hpp  observer.hpp  observer_exception.hpp
src/view/: CMakeLists.txt  terminal_view.cpp  terminal_view.hpp  view.h
